11/21/12 replace Easel.Point with Point2D
11/21/12 make Vector mutable
11/20/12 scoping bug fix in FieldInsideDisplay
11/20/12 add visualization of field inside magnet
11/20/12 apply default IntelliJ formatting throughout
11/20/12 implement control panel using static connection method
11/20/12 fix: account for magnet orientation when computing b-field vector
11/20/12 update compass orientation when magnet orientation changes
11/20/12 add remaining parts to compass display object (no kinematics yet)
11/20/12 add compass ring, make needle size match Java sim
11/20/12 add needle to compass display object
11/20/12 add orientation property to compass
11/20/12 add missing call to FieldMeter.updateValues
11/20/12 compass needle display object, for use in compass and b-field visualization
11/20/12 make Dimension mutable
11/20/12 implement simple "linear distance from point" model of bar magnet field
11/19/12 make the field vector the same everywhere inside the magnet
11/19/12 add factory method for creating vectors using polar coordinates
11/19/12 wire up stub observer to "see inside magnet" property
11/19/12 factor out check box code into PropertyCheckBox
11/19/12 doc function params
11/19/12 display values in field meter
11/19/12 add value updater to FieldMeter display object
11/19/12 add value to FieldMeter model
11/19/12 add stub for BarMagnet.getFieldVector
11/19/12 get rid of canvas text cursor by disabling text selection.
11/19/12 enable touch events
11/19/12 add MathUtil, for conversion between degrees (Easel) and radians (model)
11/19/12 doc
11/19/12 center field display object at the origin
11/19/12 tweak initial location of compass and field meter
11/19/12 move visibility property into model types
11/19/12 FaradayStage: fix type name internally, add reset
11/19/12 reuse meter image from faraday java
11/19/12 move debug logging into model objects
11/19/12 add drag handlers to compass and field meter
11/19/12 create stubs for all model object types