@@ -84,13 +84,13 @@ define( [
 
                 fieldMeter.visible.addObserver( updateVisibility );
 
-                // @param {Vector} value
-                function updateValues( value ) {
+                // @param {Vector2D} vector
+                function updateValues( vector ) {
                     var NUMBER_OF_DECIMALS = 2;
-                    magnitudeText.text = value.getMagnitude().toFixed( NUMBER_OF_DECIMALS );
-                    xText.text = value.x.toFixed( NUMBER_OF_DECIMALS );
-                    yText.text = value.y.toFixed( NUMBER_OF_DECIMALS );
-                    angleText.text = MathUtil.toDegrees( value.getAngle() ).toFixed( NUMBER_OF_DECIMALS );
+                    magnitudeText.text = vector.getMagnitude().toFixed( NUMBER_OF_DECIMALS );
+                    xText.text = vector.x.toFixed( NUMBER_OF_DECIMALS );
+                    yText.text = vector.y.toFixed( NUMBER_OF_DECIMALS );
+                    angleText.text = MathUtil.toDegrees( vector.getAngle() ).toFixed( NUMBER_OF_DECIMALS );
                 }
 
                 fieldMeter.value.addObserver( updateValues );
